@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -45,6 +45,7 @@
  *          /test/lib
  * @build nsk.jvmti.GetThreadInfo.thrinfo001
  * @run main/othervm/native ExecDriver --java
+ *      --enable-preview
  *      -agentlib:thrinfo001
  *      nsk.jvmti.GetThreadInfo.thrinfo001
  */
